Working Zoo Spider

--- a/ScrapyProject.ipynb
+++ b/ScrapyProject.ipynb
@@ -21,18 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "#extracting csv file with zoo name and data\n",
-    "df = pd.read_csv('zoodata.csv')"
+    "df = pd.read_csv(r'C:\\Users\\conma\\Desktop\\NYCDSA\\Webscraping\\ScrapyProject\\zoo_data\\zoodata.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -58,59 +58,198 @@
        "      <th></th>\n",
        "      <th>address</th>\n",
        "      <th>city</th>\n",
+       "      <th>country</th>\n",
        "      <th>name</th>\n",
-       "      <th>state_country</th>\n",
+       "      <th>name_url</th>\n",
+       "      <th>num_animals</th>\n",
+       "      <th>num_species</th>\n",
+       "      <th>state</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>2070 Zoo Ln,Blvd. Manuel Ávila Camacho S/N, Ri...</td>\n",
-       "      <td>Abilene,Veracruz,Camden,Puebla,Port Clinton,Ak...</td>\n",
-       "      <td>Abilene Zoological Gardens,Adventure Aquarium,...</td>\n",
-       "      <td>Texas,United States,Veracruz,Mexico,New Jersey...</td>\n",
+       "      <td>2070 Zoo Ln</td>\n",
+       "      <td>Abilene</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Abilene Zoological Gardens</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Abilene_Zoologic...</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>Texas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>2070 Zoo Ln,Blvd. Manuel Ávila Camacho S/N, Ri...</td>\n",
-       "      <td>Abilene,Veracruz,Camden,Puebla,Port Clinton,Ak...</td>\n",
-       "      <td>Abilene Zoological Gardens,Adventure Aquarium,...</td>\n",
-       "      <td>Texas,United States,Veracruz,Mexico,New Jersey...</td>\n",
+       "      <td>701 Whirlpool Street</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Aquarium of Niagara</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Aquarium_of_Niagara</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>New York</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>2070 Zoo Ln,Blvd. Manuel Ávila Camacho S/N, Ri...</td>\n",
-       "      <td>Abilene,Veracruz,Camden,Puebla,Port Clinton,Ak...</td>\n",
-       "      <td>Abilene Zoological Gardens,Adventure Aquarium,...</td>\n",
-       "      <td>Texas,United States,Veracruz,Mexico,New Jersey...</td>\n",
+       "      <td>2595 Roblin Blvd</td>\n",
+       "      <td>Winnipeg</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>Assiniboine Park Zoo</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Assiniboine_Park...</td>\n",
+       "      <td>200</td>\n",
+       "      <td>200</td>\n",
+       "      <td>Manitoba</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>500 Edgewood Ave</td>\n",
+       "      <td>Akron</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Akron Zoological Park</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Akron_Zoo</td>\n",
+       "      <td>700</td>\n",
+       "      <td>700</td>\n",
+       "      <td>Ohio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>11 Oriente #2407</td>\n",
+       "      <td>Puebla</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>Africam Safari Park</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Africam_Safari_Park</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>Puebla</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>245</td>\n",
+       "      <td>2600 Deweese Parkway</td>\n",
+       "      <td>Dayton</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Boonshoft Museum of Discovery</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Boonshoft_Museum...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ohio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>246</td>\n",
+       "      <td>7401 SW 9th St</td>\n",
+       "      <td>Des Moines</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Blank Park Zoo</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Blank_Park_Zoo</td>\n",
+       "      <td>1,484</td>\n",
+       "      <td>1,484</td>\n",
+       "      <td>Iowa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>247</td>\n",
+       "      <td>USCD, 9500 Gilman Dr</td>\n",
+       "      <td>La Jolla</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Birch Aquarium at Scripps</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Birch_Aquarium</td>\n",
+       "      <td>3,000+</td>\n",
+       "      <td>3,000+</td>\n",
+       "      <td>California</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>248</td>\n",
+       "      <td>7400 Division Dr</td>\n",
+       "      <td>Battle Creek</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Binder Park Zoo</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Binder_Park_Zoo</td>\n",
+       "      <td>500</td>\n",
+       "      <td>500</td>\n",
+       "      <td>Michigan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>249</td>\n",
+       "      <td>PO Box FL 145</td>\n",
+       "      <td>Flatts Village</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bermuda Aquarium, Museum and Zoo</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Bermuda_Aquarium...</td>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "      <td>Bermuda</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>250 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             address  \\\n",
-       "0  2070 Zoo Ln,Blvd. Manuel Ávila Camacho S/N, Ri...   \n",
-       "1  2070 Zoo Ln,Blvd. Manuel Ávila Camacho S/N, Ri...   \n",
-       "2  2070 Zoo Ln,Blvd. Manuel Ávila Camacho S/N, Ri...   \n",
+       "                  address            city        country  \\\n",
+       "0             2070 Zoo Ln         Abilene  United States   \n",
+       "1    701 Whirlpool Street        New York  United States   \n",
+       "2        2595 Roblin Blvd        Winnipeg         Canada   \n",
+       "3        500 Edgewood Ave           Akron  United States   \n",
+       "4        11 Oriente #2407          Puebla         Mexico   \n",
+       "..                    ...             ...            ...   \n",
+       "245  2600 Deweese Parkway          Dayton  United States   \n",
+       "246        7401 SW 9th St      Des Moines  United States   \n",
+       "247  USCD, 9500 Gilman Dr        La Jolla  United States   \n",
+       "248      7400 Division Dr    Battle Creek  United States   \n",
+       "249         PO Box FL 145  Flatts Village            NaN   \n",
        "\n",
-       "                                                city  \\\n",
-       "0  Abilene,Veracruz,Camden,Puebla,Port Clinton,Ak...   \n",
-       "1  Abilene,Veracruz,Camden,Puebla,Port Clinton,Ak...   \n",
-       "2  Abilene,Veracruz,Camden,Puebla,Port Clinton,Ak...   \n",
+       "                                 name  \\\n",
+       "0          Abilene Zoological Gardens   \n",
+       "1                 Aquarium of Niagara   \n",
+       "2                Assiniboine Park Zoo   \n",
+       "3               Akron Zoological Park   \n",
+       "4                 Africam Safari Park   \n",
+       "..                                ...   \n",
+       "245     Boonshoft Museum of Discovery   \n",
+       "246                    Blank Park Zoo   \n",
+       "247         Birch Aquarium at Scripps   \n",
+       "248                   Binder Park Zoo   \n",
+       "249  Bermuda Aquarium, Museum and Zoo   \n",
        "\n",
-       "                                                name  \\\n",
-       "0  Abilene Zoological Gardens,Adventure Aquarium,...   \n",
-       "1  Abilene Zoological Gardens,Adventure Aquarium,...   \n",
-       "2  Abilene Zoological Gardens,Adventure Aquarium,...   \n",
+       "                                              name_url num_animals  \\\n",
+       "0    https://en.wikipedia.org/wiki/Abilene_Zoologic...        1100   \n",
+       "1    https://en.wikipedia.org/wiki/Aquarium_of_Niagara         NaN   \n",
+       "2    https://en.wikipedia.org/wiki/Assiniboine_Park...         200   \n",
+       "3              https://en.wikipedia.org/wiki/Akron_Zoo         700   \n",
+       "4    https://en.wikipedia.org/wiki/Africam_Safari_Park        2500   \n",
+       "..                                                 ...         ...   \n",
+       "245  https://en.wikipedia.org/wiki/Boonshoft_Museum...         NaN   \n",
+       "246       https://en.wikipedia.org/wiki/Blank_Park_Zoo       1,484   \n",
+       "247       https://en.wikipedia.org/wiki/Birch_Aquarium      3,000+   \n",
+       "248      https://en.wikipedia.org/wiki/Binder_Park_Zoo         500   \n",
+       "249  https://en.wikipedia.org/wiki/Bermuda_Aquarium...         300   \n",
        "\n",
-       "                                       state_country  \n",
-       "0  Texas,United States,Veracruz,Mexico,New Jersey...  \n",
-       "1  Texas,United States,Veracruz,Mexico,New Jersey...  \n",
-       "2  Texas,United States,Veracruz,Mexico,New Jersey...  "
+       "    num_species       state  \n",
+       "0          1100       Texas  \n",
+       "1           NaN    New York  \n",
+       "2           200    Manitoba  \n",
+       "3           700        Ohio  \n",
+       "4          2500      Puebla  \n",
+       "..          ...         ...  \n",
+       "245         NaN        Ohio  \n",
+       "246       1,484        Iowa  \n",
+       "247      3,000+  California  \n",
+       "248         500    Michigan  \n",
+       "249         300     Bermuda  \n",
+       "\n",
+       "[250 rows x 8 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
